--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ sudo: true
 
 before_install:
   - chmod +x mvnw
-
+  
 script:
-- ./mvnw clean install -B
+- ./mvnw -s src/test/resources/settings.xml clean install -B
+
+cache:
+  directories:
+  - $HOME/.m2
